package com.pluralsight.portfolio.app;

public class Program {
    public static void main(String[] args) {

    }
}
