package com.pluralsight.portfolio.app;

public interface Valuable {

    double getValue();
}
